# rbpf-1

./: Cargo.toml  README.md
benches/: elf_loader.rs  jit_compile.rs  memory_mapping.rs  vm_execution.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: disassemble.rs  to_json.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  dumb.rs  grammar_aware.rs  semantic_aware.rs  smart.rs  smart_jit_diff.rs  smarter_jit_diff.rs  verify_semantic_aware.rs
src/: assembler.rs  ebpf.rs  elf.rs  interpreter.rs  jit.rs  lib.rs  memory_management.rs  syscalls.rs  verifier.rs  vm.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: assembler.rs  disassembler.rs  misc.rs  ubpf_execution.rs  ubpf_verifier.rs
tests/elfs/: elfs.sh
